# gihon

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cbz_viewer.rs  commands.rs  config_manager.rs  errors.rs  file_manager.rs  lib.rs  main.rs
src/components/: Card.tsx  MangaViewer.tsx  index.ts
src/components/layout/: Navbar.tsx
src/components/modals/: CardContextMenu.tsx  EditorModal.tsx  SettingsModal.tsx
src/contexts/: AlertContextProvider.tsx  alertContext.ts  useAlert.ts
src/utils/: formatError.ts
