[package]
name = "gihon"
version = "0.1.0"
description = "A modern manga/comic reader built with Tauri"
authors = ["Luis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gihon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs = "0.0.5"
tauri-plugin-dialog = "2"
zip = "5.1.1"
quick-xml = "0.38.3"
serde-xml-rs = "0.8.1"
base64 = "0.22.1"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"